# maf-a2a-servicebus

./: README.md  architecture-prompt.txt
.github/: copilot-instructions.md
architecture/: high-level-architecture.drawio
sample/: .gitignore  COMPARISON-SB-VS-A2A.md  DEMO-SETUP.md  DEMO.md  FUTURE-A2A.md  demo-architecture.drawio
sample/app-orchestrator/: main.py  pyproject.toml
sample/app-partner-agent/: main.py  pyproject.toml
sample/client/: main.py  pyproject.toml
