[project]
name = "app-orchestrator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "agent-framework",
    "agent-framework-openai",
    "azure-identity",
    "azure-servicebus",
    "azure-storage-blob",
    "fastapi",
    "uvicorn",
    "python-dotenv",
]

[tool.uv]
package = false
