[project]
name = "app-partner-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "agent-framework",
    "agent-framework-openai",
    "a2a-sdk",
    "azure-identity",
    "azure-storage-blob",
    "uvicorn",
    "python-dotenv",
]

[tool.uv]
package = false
prerelease = "allow"
